--- a/public/templates/receitas.html
+++ b/public/templates/receitas.html
@@ -1,1 +1,73 @@
-<h1>olá esse é o receitas</h1>
+<div class="recipe container" id="recipe">
+  <h2>Receitas da França</h2>
+  <div class="recipe__list" id="recipe-list">
+    <div class="recipe__item" id="recipe-item">
+      <h3 class="recipe__title">Title</h3>
+      <div class="recipe__img" id="recipe-img">
+        <img
+          src="https://www.themealdb.com/images/media/meals/vwuprt1511813703.jpg"
+          alt="image of" />
+      </div>
+      <button class="recipe__button" onclick="openModal('id')">
+        Saiba mais
+      </button>
+    </div>
+
+    <div class="recipe__item" id="recipe-item">
+      <h3 class="recipe__title">Title</h3>
+      <div class="recipe__img" id="recipe-img">
+        <img
+          src="https://www.themealdb.com/images/media/meals/vwuprt1511813703.jpg"
+          alt="image of" />
+      </div>
+      <button class="recipe__button" onclick="openModal('id')">
+        Saiba mais
+      </button>
+    </div>
+
+    <div class="recipe__item" id="recipe-item">
+      <h3 class="recipe__title">Title</h3>
+      <div class="recipe__img" id="recipe-img">
+        <img
+          src="https://www.themealdb.com/images/media/meals/vwuprt1511813703.jpg"
+          alt="image of" />
+      </div>
+      <button class="recipe__button" onclick="openModal('id')">
+        Saiba mais
+      </button>
+    </div>
+    <div class="recipe__item" id="recipe-item">
+      <h3 class="recipe__title">Title</h3>
+      <div class="recipe__img" id="recipe-img">
+        <img
+          src="https://www.themealdb.com/images/media/meals/vwuprt1511813703.jpg"
+          alt="image of" />
+      </div>
+      <button class="recipe__button" onclick="openModal('id')">
+        Saiba mais
+      </button>
+    </div>
+    <div class="recipe__item" id="recipe-item">
+      <h3 class="recipe__title">Title</h3>
+      <div class="recipe__img" id="recipe-img">
+        <img
+          src="https://www.themealdb.com/images/media/meals/vwuprt1511813703.jpg"
+          alt="image of" />
+      </div>
+      <button class="recipe__button" onclick="openModal('id')">
+        Saiba mais
+      </button>
+    </div>
+    <div class="recipe__item" id="recipe-item">
+      <h3 class="recipe__title">Title</h3>
+      <div class="recipe__img" id="recipe-img">
+        <img
+          src="https://www.themealdb.com/images/media/meals/vwuprt1511813703.jpg"
+          alt="image of" />
+      </div>
+      <button class="recipe__button" onclick="openModal('id')">
+        Saiba mais
+      </button>
+    </div>
+  </div>
+</div>
