--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -9,12 +9,17 @@
     </p>
   </div>
 
-  <form class="home__form" id="form">
+  <form
+    class="home__form"
+    id="form">
     <fieldset class="form__fieldset">
       <legend class="form__title">
         Qual país você deseja descobrir receitas?
       </legend>
-      <select class="form__select" name="country" id="country">
+      <select
+        class="form__select"
+        name="country"
+        id="country">
         <option value="American">Americano</option>
         <option value="Dutch">Alemão</option>
         <option value="Canadian">Canadense</option>
@@ -28,10 +33,19 @@
         <option value="Mexican">Mexicano</option>
         <option value="Portuguese">Portugues</option>
         <option value="Spanish">Espanhol</option>
-        <option selected value="Italian">Italiano</option>
+        <option
+          selected
+          value="Italian">
+          Italiano
+        </option>
       </select>
     </fieldset>
 
-    <button class="home__button-search" id="home-btn">Buscar</button>
+    <button
+      type="submit"
+      class="home__button-search"
+      id="home-btn">
+      Buscar
+    </button>
   </form>
 </div>
