recipe modal - connected with API info

--- a/public/templates/receitas.html
+++ b/public/templates/receitas.html
@@ -1,8 +1,19 @@
 <div
   class="recipe container"
   id="recipe">
-  <h2>Receitas da França</h2>
+  <h2>Essas são as receitas mais famosas!</h2>
   <div
     class="recipe__list"
     id="recipe-list"></div>
+
+  <article
+    class="modal__overlay overlay"
+    id="modal">
+    <section
+      class="modal__background"
+      id="modal-background"></section>
+    <section
+      class="modal__container container"
+      id="modal-container"></section>
+  </article>
 </div>
