--- a/public/src/styles/layout.css
+++ b/public/src/styles/layout.css
@@ -114,6 +114,7 @@
   }
 
   & .recipe {
+    position: relative;
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -154,8 +155,74 @@
         & .recipe__button {
           padding: 1.2rem 3rem;
           border-radius: 8px;
-
+          border: none;
+          outline: none;
           cursor: pointer;
+        }
+      }
+    }
+
+    & .modal__overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100dvh;
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      z-index: 10000;
+
+      &.overlay {
+        visibility: hidden;
+        transition: all 0.3s ease;
+        opacity: 0;
+      }
+      &.open {
+        visibility: visible;
+        opacity: 1;
+      }
+
+      & .modal__background {
+        position: absolute;
+        background-color: black;
+        width: 100%;
+        height: 100%;
+
+        opacity: 0.4;
+      }
+      & .modal__container {
+        text-align: center;
+        width: 80%;
+        height: 90%;
+        padding-block: 2rem;
+        padding-inline: 1rem;
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+
+        background-color: white;
+        border-radius: 12px;
+        z-index: 1;
+
+        & .modal__img {
+          width: 300px;
+          height: 300px;
+          object-fit: cover;
+        }
+
+        & .modal__ingredient {
+          display: flex;
+        }
+
+        & .modal__category {
+          gap: 2rem;
+          display: flex;
+        }
+
+        & .modal__tag {
         }
       }
     }
