--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
-@import url('./src/styles/global.css');
-@import url('./src/styles/layout.css');
+@import url('./global.css');
+@import url('./layout.css');
 
 @media screen and (max-width: 1150px) {
   .main {
