--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -227,4 +227,43 @@
       }
     }
   }
+
+  & .favorite {
+    & .fav__title {
+      text-align: center;
+    }
+
+    & .fav__list {
+      width: 100%;
+      height: 100dvh;
+      border: solid 1px black;
+
+      display: flex;
+      flex-wrap: wrap;
+      padding-block: 5rem;
+      padding-inline: 1rem;
+      gap: 2rem;
+
+      & .fav__item {
+        width: 250px;
+        height: 250px;
+        border: solid 1px red;
+        margin-inline: auto;
+
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+
+        & .fav__item-title {
+          text-align: center;
+        }
+
+        & .fav__item-img {
+          width: 100px;
+          width: 100px;
+          object-fit: cover;
+        }
+      }
+    }
+  }
 }
